--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "html-pdf-node": "^1.0.8",
-    "puppeteer": "^21.4.1"
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
